# kogmo-rtdb

./: CMakeLists.txt  CNAME  COPYING  Makefile  NOTICE  README  README.macosx  README.md  contact.html  contact.php  documentation.html  documentation.php  download.html  download.php  home.php  index.html  links.html  links.php  setenv.sh  style.css
_includes/: downloadfiles.html
_layouts/: default.html  head.html  redirect.html
doc/: C3_Einfuehrung_Realzeitdatenbasis.tex  Doxyfile  Doxyfile_footer.html  Doxyfile_header.html  Doxygen-mainpage.h  KogniMobil-Compatibility.patch  KogniMobil-Compatibility.txt  home.html  index.html  mkpdftex
doc/html/: Doxygen-mainpage_8h.html  Doxygen-mainpage_8h_source.html  annotated.html  classKogniMobil_1_1A2__AnyImage.html  classKogniMobil_1_1A2__Image.html  classKogniMobil_1_1C3__Ints.html  classKogniMobil_1_1C3__PlayerCtrl.html  classKogniMobil_1_1C3__PlayerCtrlConvenient.html  classKogniMobil_1_1C3__PlayerStat.html  classKogniMobil_1_1C3__Process.html  classKogniMobil_1_1C3__RTDB.html  classes.html  (+124 more)
examples/: Makefile  exampleobj_reader.C  exampleobj_writer.c  kogmo_rtdb_lister.c  kogmo_rtdb_reader.c  kogmo_rtdb_reader2_cxx.C  kogmo_rtdb_reader_cxx.C  kogmo_rtdb_reader_timeoutblocking.c  kogmo_rtdb_slotreader.c  kogmo_rtdb_udpreceiver.c  kogmo_rtdb_udpsender.c  kogmo_rtdb_watcher.c  kogmo_rtdb_writer.c  kogmo_rtdb_writer2_cxx.C  kogmo_rtdb_writer_cxx.C  persistent-object-demo.sh  persistent-object.C  process-cyclic.C  process-synchronisation-demo.sh  process-waitother.C  process-watch.C  textreader.c  textreader_cxx.C  textreader_multithread.c  textreader_multithread_nonworking.c  textwriter.c  textwriter_cxx.C
gui_player/: Makefile  qrtdbplay.cpp  qrtdbplay.pro  qrtdbplaymain.ui  qrtdbplaymain.ui.h
gui_recorder/: Makefile  qrtdbrec.cpp  qrtdbrec.pro  qrtdbrecmain.ui  qrtdbrecmain.ui.h
gui_rtdb/: Makefile  qrtdbview.cpp  qrtdbview.pro  qrtdbviewmain.ui  qrtdbviewmain.ui.h
images/: Makefile  cover-mini.fig
include/: kogmo_rtdb.h  kogmo_rtdb.hxx  kogmo_rtdb_conn.hxx  kogmo_rtdb_funcs.h  kogmo_rtdb_obj_base.h  kogmo_rtdb_obj_base.id  kogmo_rtdb_obj_base_classes.hxx  kogmo_rtdb_obj_base_funcs.h  kogmo_rtdb_obj_base_system_classes.hxx  kogmo_rtdb_obj_dump.hxx  kogmo_rtdb_obj_tids.h  kogmo_rtdb_types.h  kogmo_time.h  kogmo_time.hxx
objects/: exampleobj_rtdbobj.h  videoannot_rtdbobj.h
record/: Makefile  aviriffchunkdump.c  kogmo_rtdb_avi_idx.c  kogmo_rtdb_avirawcodec.c  kogmo_rtdb_avirawcodec.h  kogmo_rtdb_oid_map.h  kogmo_rtdb_play.c  kogmo_rtdb_record.c  kogmo_rtdb_stream.h  kogmo_rtdb_timeidx.c  kogmo_rtdb_timeidx.h
rtdb/: Makefile  kogmo_rtdb_dump.c  kogmo_rtdb_helpers.c  kogmo_rtdb_helpers.h  kogmo_rtdb_housekeeping.c  kogmo_rtdb_housekeeping.h  kogmo_rtdb_internal.h  kogmo_rtdb_ipc_posix.c  kogmo_rtdb_ipc_posix.h  kogmo_rtdb_kill  kogmo_rtdb_man.c  kogmo_rtdb_obj_base_funcs.c  kogmo_rtdb_obj_local.c  kogmo_rtdb_obj_local.h  kogmo_rtdb_objdata.c  kogmo_rtdb_objdata.h  kogmo_rtdb_objdata_slot.c  kogmo_rtdb_objects_config  kogmo_rtdb_objmeta.c  kogmo_rtdb_objmeta.h  kogmo_rtdb_objtool.c  kogmo_rtdb_proc_obj_notify.h  kogmo_rtdb_rtmalloc.c  kogmo_rtdb_rtmalloc.h  kogmo_rtdb_trace.c  kogmo_rtdb_trace.h  kogmo_rtdb_utils.c  kogmo_rtdb_utils.h  kogmo_rtdb_version.h  kogmo_time.c  kogmo_time_convert.c  locklist.txt
tests/: Makefile  kogmo_rtdb_histtest.c  kogmo_rtdb_ratetest.c  kogmo_rtdb_test.c  kogmo_rtdb_typessizecheck.c  mutex-test  tscmeasure.c
tools/: Makefile  image_extract.pl  rtdbcyclecheck.C  rtdbdumptxt.C  rtdbplayctrl.C  rtdbrecstat.c  rtdbstat.c
udprmon/: Makefile  image_jpeg_compress.c  jmem_dest.c  jmem_dest.h  jmem_src.c  jmem_src.h  jmemio.c  jmemio.c.orig  jmemio.h  jpegfix.h  libkogmo_rtdb_udpmon.c  monitor-q7.sh  udpmon.sh  udpsimple.h  udpsimpleclient.c  udpsimpleserver.c
(+91 files in other folders)
